# Frontieres

./: .gitignore  .travis.yml  AudioFileSet.cpp  AudioFileSet.h  Borderlands.cpp  Borderlands.h  CMakeCache.txt  CMakeLists.txt  Frontieres  Frontieres.cpp  Frontieres.h  Frontieres.pro  Frontieres_fr_FR.qm  GTime.cpp  GTime.h  GrainCluster.cpp  GrainCluster.h  GrainVoice.cpp  GrainVoice.h  I18n.h  Makefile  MyGLApplication.cpp  MyGLApplication.h  MyGLWindow.cpp  MyGLWindow.h  MyRtAudio.cpp  MyRtAudio.h  README-2.txt  README.md  README.txt  Scene.cpp  Scene.h  SoundRect.cpp  SoundRect.h  Stk.h  Thread.cpp  Thread.h  Window.cpp  Window.h  changelog.md  (+4 more)
.github/workflows/: build.yml
docs/manual/en/: index.html
docs/manual/fr/: .~lock.frontieres-doc.odt#  frontieres-doc.odt  index.html
libraries/: minimp3_custom.c  minimp3_custom.h
libraries/QtFont3D/: QtFont3D.cpp  QtFont3D.h  README.md
libraries/QtFont3D/test/: test_QtFont3D.cpp  test_QtFont3D.h  test_QtFont3D.pro
libraries/rtosc/src/: version.c
po/fr/: Borderlands.po
resources/: Borderlands.fr.1  Frontieres.1  Frontieres.desktop  Frontieres.fr.1  borderlands.desktop  buttons.qrc
scripts/: i18n.sh
sources/: Frontieres.cpp  Frontieres.h  GTime.cpp  GrainCluster.cpp  GrainCluster.h  GrainVoice.cpp  GrainVoice.h  MyGLApplication.cpp  MyGLWindow.cpp  MyRtAudio.cpp  MyRtAudio.h  MyRtOsc.cpp  MyRtOsc.h  Ports.cpp  Ports.h  Scene.cpp  Scene.h  SoundRect.cpp  Version.h  theglobals.h
sources/dsp/: Window.cpp  Window.h
sources/interface/: AboutDialog.ui  AdsrDialog.cpp  AdsrDialog.h  AdsrDialog.ui  BankDialog.cpp  BankDialog.h  BankDialog.ui  CloudDialog.cpp  CloudDialog.cpp.autosave  CloudDialog.h  CloudDialog.ui  CombiDialog.cpp  CombiDialog.h  CombiDialog.ui  ControlDialog.cpp  ControlDialog.h  ControlDialog.ui  GrainDialog.cpp  GrainDialog.h  GrainDialog.ui  GrainsDialog.ui  InstrumDialog.cpp  InstrumDialog.h  InstrumDialog.ui  InstrumentDialog.cpp  InstrumentDialog.h  InstrumentDialog.ui  MonitorWidget.cpp  MonitorWidget.h  MyGLApplication.cpp  MyGLApplication.h  MyGLWindow.cpp  MyGLWindow.h  MyGLWindow.ui  Node.cpp  Node.h  OptionsDialog.cpp  OptionsDialog.h  OptionsDialog.ui  PhraseDialog.cpp  (+11 more)
sources/model/: Adsr.cpp  Adsr.h  AudioFileSet.cpp  AudioFileSet.h  Cloud.cpp  Cloud.h  Combination.cpp  Combination.h  Control.h  Grain.cpp  Grain.h  GrainCluster.cpp  GrainCluster.h  GrainVoice.cpp  GrainVoice.h  MidiBank.cpp  MidiBank.h  MidiCombi.cpp  MidiCombi.h  MidiInstrum.cpp  MidiInstrum.h  ParamAdsr.cpp  ParamAdsr.h  ParamCloud.h  Phrase.cpp  Phrase.h  Sample.cpp  Sample.h  Scale.cpp  Scale.h  Scene.cpp  Scene.cpp.autosave  Scene.h  Trigger.cpp  Trigger.h
sources/visual/: Bouncing.cpp  Bouncing.h  Circular.cpp  Circular.h  CloudVis.cpp  CloudVis.h  GrainClusterVis.cpp  GrainClusterVis.h  GrainVis.cpp  GrainVis.h  Hypotrochoid.cpp  Hypotrochoid.h  Recorded.cpp  Recorded.h  SampleVis.cpp  SampleVis.h  SoundRect.cpp  SoundRect.h  Trajectory.cpp  Trajectory.h  TriggerVis.cpp  TriggerVis.h
translations/: Borderlands_fr_FR.ts  Frontieres_fr_FR.qm  Frontieres_fr_FR.ts
trash/: makefile
